# cmake-based-external

./: CMakeLists.txt  readme.md
jsoncpp/: CMakeLists.txt
nanodbc/: CMakeLists.txt  dependencies.md  example.cpp  nanodbc.h
pugixml/: CMakeLists.txt
stacktrace/: CMakeLists.txt  call_stack.hpp  call_stack_gcc.cpp  call_stack_msvc.cpp
